# Bevy-glTF-Extended-Loader

./: Cargo.toml  README.md
assets/: material_test.glb
examples/: emissive_example.rs
src/: lib.rs
