[package]
name = "bgel"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library to apply Khronos glTF extensions to Bevy models"
keywords =["glTF", "Bevy", "Material"]
repository = "https://github.com/Iaphetes/Bevy-glTF-Extended-Loader"
homepage = "https://github.com/Iaphetes/Bevy-glTF-Extended-Loader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bevy_gltf_extended_loader"
[dependencies]
bevy = "0.13"
